Fixed most issues after merging release3.6